# tcp_practice

./: .gitignore  CMakeLists.txt  README.md  mainwindow.h  mainwindow.ui  serverapp.cpp  shared.h  tcp_practice.pro
client/: CMakeLists.txt  client_program.cpp  client_program.h  client_program.pro  client_program.ui  client_program_ui.cpp  friend.cpp  friend.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tcp_practice.pro
server/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  server_program.cpp  server_program.h  server_program.pro  server_program.ui
